# sail-gateway

./: Makefile  README.md  pyproject.toml  scripts.sh
dns-server/: dns_crud.py  dns_resolution.py
docker/: Dockerfile  entrypoint.sh
nginx/: nginx.conf  nginx_b.conf
