[tool.poetry]
name = "sail-nginx-proxy"
version = "0.1.0"
description = "nginx reverse proxy which acts as an entrypoint into all of SAIL services"
authors = ["Prawal Gangwar <prawal@secureailabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
dnslib = "^0.9.23"
redis = "^4.5.5"


[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
